--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,11 @@ version: 2.1
 jobs: 
   configure_infrastructure:
     docker: 
-      - images: python:3.7-alpine3.11
+      - images: python:3.7-alpine:latest
     steps: 
       - checkout
       - add_shh_keys:
-        - fingerprint: ["d8:42:3c:4e:d0:f4:78:1f:df:6a:04:12:31:c3:32:eb"]
+        - fingerprint: ["aa:f6:6b:a1:0a:11:58:eb:54:2f:c5:20:9b:86:34:de"]
       - run:
           name: Install dependicies
           command: |
