--- a/first_playbook/.circleci/config.yml
+++ b/first_playbook/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs: 
   configure_infrastructure:
     docker: 
-      - images: python:3.7-alpine3.11
+      - image: python:3.7-alpine3.11
     steps: 
       - checkout
       - add_shh_keys:
