--- a/first_playbook/.circleci/config.yml
+++ b/first_playbook/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: python:3.7-alpine3.11
     steps: 
       - checkout
-      - add_shh_keys:
+      - add_ssh_keys:
         - fingerprints: ["d8:42:3c:4e:d0:f4:78:1f:df:6a:04:12:31:c3:32:eb"]
       - run:
           name: Install dependicies
